    character will be retained, and its actual value will be displayed. For 
    example, `犬` will be displayed as `犬`. When its value is set to true, 
    the character is escaped, and the hex code for the character is displayed. 
    For example, `犬` would be displayed as its hex code, `\u72AC`. 
      The default value for this flag is `false` for compatibility with 
    previous versions.

* Fixed BTS-582: ArangoDB client EXE package for Windows has incorrect metadata.

* Fixed BTS-575: Windows EXE installer doesn't replace service during upgrade in
  silent (non-UI) mode.

* APM-121: allow the UPSERT query to have indexHint as an extra parameter for 
  OPTIONS. It will be used as a hint by the inner FOR loop that is performed
  as part of the UPSERT query, and would help in cases such as UPSERT not 
  picking the best index automatically for lookup. 

* Fix issue #14819: Query: AQL: missing variable # for node #... location
  RestCursorHandler.cpp.

* Added enterprise licensing support including (only for Enterprise version):
    - additional API endpoint `_admin/license(GET/PUT)?force=true <text>`
    - arangosh functions: `setLicense(<text>)`, `getLicense()`
    - new error codes and metrics support

* Fix issue #14807: Fix crash during optimization of certain AQL queries during
  the remove-collect-variables optimizer rule, when a COLLECT node without output
  variables (this includes RETURN DISTINCT) occured in the plan.

* Update iresearch library to the upstream. Fixed TSan/ASan detected issues.

* Added new ArangoSearch analyzer type 'collation'.

* Add basic overload control to arangod. 
  This change adds the `x-arango-queue-time-seconds` header to all responses
  sent by arangod. This header contains the most recent request dequeing time 
  (in seconds) as tracked by the scheduler. This value can be used by client
  applications and drivers to detect server overload and react on it.