@@ -63,10 +63,6 @@
 
 namespace arangodb {
 
-////////////////////////////////////////////////////////////////////////////////
-/// If these values change, make sure to reflect the changes in
-/// RocksDBPrefixExtractor as well.
-////////////////////////////////////////////////////////////////////////////////
 class RocksDBThrottle : public rocksdb::EventListener {
  public:
   RocksDBThrottle();
@@ -84,12 +80,12 @@ class RocksDBThrottle : public rocksdb::EventListener {
 
   static void AdjustThreadPriority(int Adjustment);
 
-  void StopThread();
+  void stopThread();
 
   uint64_t GetThrottle() const { return _throttleBps; }
 
  protected:
-  void Startup(rocksdb::DB* db);
+  void startup(rocksdb::DB* db);
 
   void SetThrottleWriteRate(std::chrono::microseconds Micros, uint64_t Keys,
                             uint64_t Bytes, bool IsLevel0);
@@ -107,7 +103,7 @@ class RocksDBThrottle : public rocksdb::EventListener {
   static constexpr unsigned THROTTLE_SECONDS = 60;
   static constexpr unsigned THROTTLE_INTERVALS = 63;
 
-  // following is a heristic value, determined by trial and error.
+  // following is a heuristic value, determined by trial and error.
   //  its job is slow down the rate of change in the current throttle.
   //  do not want sudden changes in one or two intervals to swing
   //  the throttle value wildly.  Goal is a nice, even throttle value.
@@ -125,9 +121,21 @@ class RocksDBThrottle : public rocksdb::EventListener {
   };
 
   rocksdb::DBImpl* _internalRocksDB;
-  std::once_flag _initFlag;
-  std::atomic<bool> _threadRunning;
   std::future<void> _threadFuture;
+
+  /// state of the throttle. the state will always be advanced from a 
+  /// lower to a higher number (e.g. from NotStarted to Starting, 
+  /// from Starting to Running etc.) but never vice versa. It is possible
+  /// jump from NotStarted to Done directly, but otherwise the sequence
+  /// is NotStarted => Starting => Running => ShuttingDown => Done
+  enum class ThrottleState {
+    NotStarted    = 1, // not started, this is the state at the beginning
+    Starting      = 2, // while background thread is started
+    Running       = 3, // throttle is operating normally
+    ShuttingDown  = 4, // throttle is in shutdown
+    Done          = 5, // throttle is shutdown
+  };
+  std::atomic<ThrottleState> _throttleState;
 
   Mutex _threadMutex;
   basics::ConditionVariable _threadCondvar;
