@@ -43,6 +43,9 @@ devel
       The default value for this flag is `false` for compatibility with 
     previous versions.
 
+* Fix race in RocksDB throttle listener, when it was getting started lazily
+  during server shutdown.
+
 * Fixed BTS-582: ArangoDB client EXE package for Windows has incorrect metadata.
 
 * Fixed BTS-575: Windows EXE installer doesn't replace service during upgrade in
